[project]
name = "fishsense-common"
version = "0.1.0"
description = ""
authors = [
    {name = "Christopher L. Crutchfield",email = "ccrutchf@ucsd.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wakepy (>=0.10.1,<0.11.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "ray (>=2.43.0,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "cupy-cuda12x (>=13.4.1,<14.0.0)",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
